--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="resume">
         <div class="resume_left">
             <div class="resume_profile">
-                <img src="profile.jpg" alt="Profile picture" />
+                <img src="profile.png" alt="Profile picture" />
             </div>
             <div class="resume_content">
                 <div class="resume_item resume_info">
