fix contact email

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="resume_content">
                 <div class="resume_item resume_info">
                     <div class="title">
-                        <p class="bold">Grace Hopper</p>
+                        <p class="bold">Inna Dmytrenko</p>
                         <p class="regular">QA / Tester</p>
                     </div>
                     <ul>
@@ -43,7 +43,7 @@
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
-                            <div class="data">my@email.cz</div>
+                            <div class="data"><a href="mailto:dmytinna@gmail.com">dmytinna@gmail.com</a></div>
                         </li>
                         <li>
                             <div class="icon">
