--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                             <div class="icon">
                                 <i class="fas fa-mobile-alt"></i>
                             </div>
-                            <div class="data">+420 123 456 789</div>
+                            <div class="data">+420 722 127 954</div>
                         </li>
                         <li>
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
                             </div>
-                            <div class="data"><a href="mailto:dmytinna@gmail.com">dmytinna@gmail.com</a></div>
+                            <div class="data"><a href="mailto:dmytinna@gmail.com&body=привет?subject=вопрос">dmytinna@gmail.com</a></div>
                         </li>
                         <li>
                             <div class="icon">
