--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grace Hopper</title>
     <link rel="stylesheet" href="style.css">
+    <link type="image/x-icon" href="profile.png" rel="shortcut icon">
 </head>
 
 <body>
