--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <div class="icon">
                                 <i class="fas fa-mobile-alt"></i>
                             </div>
-                            <div class="data">+420 722 127 954</div>
+                            <a href="tel:+420722127954" class="data">+420 722 127 954</div>
                         </li>
                         <li>
                             <div class="icon">
