--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <div class="icon">
                                 <i class="fas fa-globe"></i>
                             </div>
-                            <div class="data">github.com/my-github</div>
+                            <div class="data"><a href="https://github.com/inna-dmytrenko">my-github</a></div>
                         </li>
                     </ul>
                 </div>
